base/services/bashhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bashhub
  labels:
    app: bashhub
spec:
  selector: 
    app: bashhub
  ports:
  - name: http
    port: 80
    targetPort: 8080
