base/services/bashhub/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bashhub
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bashhub.erpf.de`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: bashhub
          port: 80
  tls:
    secretName: bashhub-erpf-de-tls
